2008-01-28  Jan Schmidt  <jan.schmidt@sun.com>

	* bin/new-release:
	* src/htdocs/entities.gst:
	* src/htdocs/news/news.xml:
	* src/htdocs/releases/gst-plugins-base/0.10.16.xml:
	* src/htdocs/releases/gst-plugins-base/Makefile.am:
	* src/htdocs/releases/gst-python/0.10.10.xml:
	* src/htdocs/releases/gst-python/Makefile.am:
	* src/htdocs/releases/gstreamer/0.10.16.xml:
	* src/htdocs/releases/gstreamer/Makefile.am:
	Announce releases of core 0.10.16, base 0.10.16 and python 0.10.10

2008-01-11  Thomas Vander Stichele  <thomas at apestaart dot org>

	* src/htdocs/apps/index.xml:
	  Wikipedia says the site has moved.  Wikipedia! Boggle.
	  http://en.wikipedia.org/wiki/BMPx

2007-12-22  Thomas Vander Stichele  <thomas at apestaart dot org>

	* src/htdocs/apps/index.xml:
	  Patch from Russ Nelson to add Gnash.

2007-12-17  Stefan Kost  <ensonic@users.sf.net>

	* src/htdocs/dev/index.xml:
	  Add link for the wiki.

2007-12-07  Tim-Philipp Müller  <tim at centricular dot net>

	* src/htdocs/artwork/index.xml:
	  Fix link to SVG logo now that it's been uploaded to
	  the same place where the other logos are (#500633)

	* src/htdocs/bugs/bugs.xml:
	  Add more milestones.

2007-12-06  Thijs Vermeir  <thijsvermeir@gmail.com>

	* src/htdocs/lists/index.xml:
	Fix the link to the gstreamer-openmax archives

2007-12-05  Edward Hervey  <bilboed@bilboed.com>

	* src/htdocs/news/news.xml:
	Fix download link for gst-ffmpeg 0.10.3

2007-12-04  Edward Hervey  <bilboed@bilboed.com>

	* src/htdocs/entities.gst:
	* src/htdocs/news/news.xml:
	* src/htdocs/releases/gst-ffmpeg/0.10.3.xml:
	* src/htdocs/releases/gst-ffmpeg/Makefile.am:
	gst-ffmpeg 0.10.3 release

2007-11-29  Stefan Kost  <ensonic@users.sf.net>

	* src/htdocs/apps/index.xml:
	* src/htdocs/bindings/bindings.xsl:
	* src/htdocs/lists/index.xml:
	* src/htdocs/modules/modules.xsl:
	  Add headings for those pages.

2007-11-29  Stefan Kost  <ensonic@users.sf.net>

	* HACKING:
	* TODO:
	* src/copy/gstreamer.css: