@@ -1,9 +1,9 @@
-<!ENTITY gst-version-stable "0.10.16">
+<!ENTITY gst-version-stable "0.10.17">
 <!ENTITY gst-plugins-version-stable "0.8.12">
 
 <!ENTITY gst-ffmpeg-version-stable "0.10.3">
 <!ENTITY gst-python-version-stable "0.10.10">
-<!ENTITY gst-plugins-base-version-stable "0.10.16">
+<!ENTITY gst-plugins-base-version-stable "0.10.17">
 <!ENTITY gst-plugins-good-version-stable "0.10.6">
 <!ENTITY gst-plugins-ugly-version-stable "0.10.6">
 <!ENTITY gst-plugins-bad-version-stable "0.10.5">
