@@ -2965,10 +2965,10 @@ or download tarballs for
 
 <item>
     <date>2008-01-28 23:59</date>
-    <title>GStreamer Core 0.10.16 Core 0.10.16 and Python Bindings 0.10.10 stable releases</title>
+    <title>GStreamer Core 0.10.16 Base 0.10.16 and Python Bindings 0.10.10 stable releases</title>
 <content>
 <p>
-The GStreamer team is proud to announce a new releases of GStreamer Core, GStreamer Base Plugins and GStreamer Python Bindings in the 0.10 GStreamer stable release series.
+The GStreamer team is proud to announce new releases of GStreamer Core, GStreamer Base Plugins and GStreamer Python Bindings in the 0.10 GStreamer stable release series.
 </p>
 <p>
 Check out release notes for
@@ -2982,4 +2982,23 @@ or download tarballs for
 </p>
     </content>
   </item>
+
+<item>
+    <date>2008-01-20 14:30</date>
+<title>GStreamer Core 0.10.17 Base 0.10.17 stable releases</title>
+<content>
+<p>
+The GStreamer team is surprised to announce new releases of GStreamer Core and GStreamer Base Plugins in the 0.10 GStreamer stable release series.
+</p>
+<p>
+Check out release notes for
+<a href="&site;/releases/gstreamer/0.10.17.html">gstreamer</a> and 
+<a href="&site;/releases/gst-plugins-base/0.10.17.html">gst-plugins-base</a>
+or download tarballs for
+<a href="&site;/src/gstreamer/gstreamer-0.10.17.tar.bz2">gstreamer</a> and
+<a href="&site;/src/gst-plugins-base/gst-plugins-base-0.10.17.tar.bz2">gst-plugins-base</a>
+</p>
+    </content>
+  </item>
+
 </news>
