@@ -1,0 +1,110 @@
+<?xml version="1.0"?>
+<?xml-stylesheet href="../releases.xsl" type="text/xsl"?>
+<release>
+  <module>gst-plugins-base</module>
+  <module-fancy>GStreamer Base Plug-ins</module-fancy>
+  <name>Peanut Butter and Jelly</name>
+  <version>0.10.17</version>
+
+  <intro>
+
+<p>
+The GStreamer team is proud to announce a new release
+in the 0.10.x stable series of the
+GStreamer Base Plug-ins.
+</p>
+<p>
+The 0.10.x series is a stable series targeted at end users.
+It is not API or ABI compatible with the stable 0.8.x series.
+It is, however, parallel installable with the 0.8.x series.
+</p>
+
+<p>
+This module contains a set of reference plugins, base classes for other
+plugins, and helper libraries.
+
+This module is kept up-to-date together with the core developments.  Element
+writers should look at the elements in this module as a reference for
+their development.
+
+This module contains elements for, among others:
+<ul>
+  <li>device plugins: x(v)imagesink, alsa, v4lsrc, cdparanoia</li>
+  <li>containers: ogg</li>
+  <li>codecs: vorbis, theora</li>
+  <li>text: textoverlay, subparse</li>
+  <li>sources: audiotestsrc, videotestsrc, gnomevfssrc</li>
+  <li>network: tcp</li>
+  <li>typefind</li>
+  <li>audio processing: audioconvert, adder, audiorate, audioscale, volume</li>
+  <li>visualisation: libvisual</li>
+  <li>video processing: ffmpegcolorspace</li>
+  <li>aggregate elements: decodebin, playbin</li>
+</ul>
+
+Other modules containing plug-ins are:
+
+<dl>
+<dt>gst-plugins-good</dt>
+<dd>contains a set of well-supported plug-ins under our preferred license</dd>
+<dt>gst-plugins-ugly</dt>
+<dd>contains a set of well-supported plug-ins, but might pose problems for
+    distributors</dd>
+<dt>gst-plugins-bad</dt>
+<dd>contains a set of less supported plug-ins that haven't passed the
+    rigorous quality testing we expect</dd>
+</dl>
+
+</p>
+  </intro>
+  <features>
+    <feature>Work-around ABI breakage due to unfortunate use of the GST_DISABLE_DEPRECATED macro</feature>
+    <feature>Export 2 missing functions needed for bindings in the win32 build</feature>
+    <feature>Initialise the GstRingBuffer GType from a thread-safe context</feature>
+  </features>
+
+  <applications>
+  </applications>
+          <contributors>
+	<person>Jan Schmidt</person>
+	<person>Sebastian Dröge</person>
+	<person>Tim-Philipp Müller</person>
+  </contributors>
+
+
+
+
+
+<!--
+  <api>
+    <additions>
+    </additions>
+    <deprecations>
+    </deprecations>
+  </api>
+-->
+
+  
+
+  
+
+  
+
+  
+
+  <bugs>
+    <bug>
+      <id>511825</id>
+      <summary>[RTSP] compiler warning on FreeBSD</summary>
+    </bug>
+    <bug>
+      <id>513018</id>
+      <summary>crash in Volume Control: I typed my password at t...</summary>
+    </bug>
+    <bug>
+      <id>512334</id>
+      <summary>g_critical() when using GstAudioFilter &amp; GST_DEBUG</summary>
+    </bug>
+  </bugs>
+
+</release>
